--- a/src/styles/components/ProjectItem.scss
+++ b/src/styles/components/ProjectItem.scss
@@ -5,7 +5,7 @@
   flex-direction: row;
   align-items: stretch;
   justify-content: center;
-  padding: 32px 64px 32px 0px;
+  padding: 32px;
   border-radius: 8px;
   transition: all .2s cubic-bezier(.4, 0, .2, 1);
   cursor: pointer;
@@ -58,6 +58,7 @@
     height: 100%;
     padding-top: 12px;
     min-width: 140px;
+    display: none;
 
     p {
       font-size: 13px;
@@ -76,7 +77,7 @@
   }
 
   .content-column {
-    width: 75%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -97,16 +98,23 @@
       font-weight: 500;
       margin: 12px 0;
       color: $color-text-primary;
+      margin-top: 4px;
 
       svg {
         margin-left: 4px;
       }
     }
 
+    .date {
+      font-size: 15px;
+      font-weight: 500;
+    }
+
     p {
-      font-size: 14px;
+      font-size: 15px;
       margin: 0;
       color: $color-text-secondary;
+      text-align: justify;
     }
 
     .tags {
